--- a/custom_components/binance/manifest.json
+++ b/custom_components/binance/manifest.json
@@ -1,10 +1,11 @@
 {
   "domain": "binance",
   "name": "Binance",
-  "version": "1.0.1",
-  "documentation": "https://www.home-assistant.io/integrations/binance",  
-  "requirements": ["requests==2.32.3"],
+  "documentation": "https://github.com/cataseven/Home-Assitant-Binance-Integration",
+  "issue_tracker": "https://github.com/cataseven/Home-Assitant-Binance-Integration/issues", 
   "codeowners": ["@cataseven"],
   "config_flow": true,
-  "iot_class": "cloud_polling" 
+  "dependencies": [],
+  "requirements": [],
+  "version": "1.0.2" 
 }
