--- a/custom_components/binance/manifest.json
+++ b/custom_components/binance/manifest.json
@@ -1,8 +1,8 @@
 {
   "domain": "binance",
   "name": "Binance",
-  "documentation": "https://github.com/cataseven/Home-Assistant-Binance-Integration",
-  "issue_tracker": "https://github.com/cataseven/Home-Assistant-Binance-Integration/issues",
+  "documentation": "https://github.com/cataseven/Binance-Wallet-Integration-Home-Assistant/blob/main/README.md",
+  "issue_tracker": "https://github.com/cataseven/Binance-Wallet-Integration-Home-Assistant/issues",
   "codeowners": ["@cataseven"],
   "config_flow": true,
   "dependencies": [],
