--- a/custom_components/binance/manifest.json
+++ b/custom_components/binance/manifest.json
@@ -1,12 +1,12 @@
 {
   "domain": "binance",
   "name": "Binance",
-  "documentation": "https://github.com/cataseven/Binance-Wallet-Integration-Home-Assistant/blob/main/README.md",
-  "issue_tracker": "https://github.com/cataseven/Binance-Wallet-Integration-Home-Assistant/issues",
   "codeowners": ["@cataseven"],
   "config_flow": true,
   "dependencies": [],
+  "documentation": "https://github.com/cataseven/Binance-Wallet-Integration-Home-Assistant/blob/main/README.md",
+  "iot_class": "cloud_polling",
+  "issue_tracker": "https://github.com/cataseven/Binance-Wallet-Integration-Home-Assistant/issues",
   "requirements": [],
-  "version": "1.1.0",
-  "iot_class": "cloud_polling"
+  "version": "1.1.0"
 }
