--- a/custom_components/binance/manifest.json
+++ b/custom_components/binance/manifest.json
@@ -5,8 +5,8 @@
   "config_flow": true,
   "dependencies": [],
   "documentation": "https://github.com/cataseven/Binance-Wallet-Integration-Home-Assistant/blob/main/README.md",
-  "iot_class": "cloud_polling",
+  "iot_class": "cloud_push",
   "issue_tracker": "https://github.com/cataseven/Binance-Wallet-Integration-Home-Assistant/issues",
   "requirements": [],
-  "version": "1.1.6"
+  "version": "2.0.0"
 }
